# Collection

./: .gitignore  CMakeLists.txt  TODO.txt  spheres.txt  test.txt
Allocators/: BasicAllocator.cpp  BasicAllocator.h  CMakeLists.txt
Applications/: CMakeLists.txt
Applications/Graphics/: 2DView.cpp  2DViewLua.cpp  3DView.cpp  CMakeLists.txt  GUI.cpp  View.cpp  netRoom.lua  spheres.lua
BVH/: BVH.cpp  BVH.h  CMakeLists.txt
BitMapImage/: CMakeLists.txt  Image.cpp  Image.h
Containers/: BasicAllocator.h  CMakeLists.txt  Deque.h  Vector.cpp  Vector.h
Math/: BBox.cpp  BBox.h  BBoxData.cpp  BBoxData.h  CMakeLists.txt  Color.cpp  Color.h  CoordinateSystem.cpp  CoordinateSystem.h  Iterator.h  Mat.h  Mat2.h  Mat2f.cpp  Mat2f.h  Mat3.h  Mat3f.cpp  Mat3f.h  Mat4.h  Mat4f.cpp  Mat4f.h  RGB.cpp  RGB.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Utils.cpp  Utils.h  Vec2.h  Vec3.h  Vec4.h  Vector.cpp  Vector.h  Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h
Memory/: CMakeLists.txt  SharedPtr.cpp  SharedPtr.h  UniquePtr.cpp  UniquePtr.h
Mesh/: BaseMesh.cpp  BaseMesh.h  CMakeLists.txt  CoordinateSystem.cpp  CoordinateSystem.h  CubeMesh.cpp  CubeMesh.h  GroupOfMeshes.cpp  GroupOfMeshes.h  IntersectionData.cpp  IntersectionData.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PointLight.cpp  PointLight.h  Primitive.cpp  Primitive.h  Sphere.cpp  Sphere.h  SphereMesh.cpp  SphereMesh.h  SpotLight.cpp  SpotLight.h  Triangle.cpp  Triangle.h  TriangleBuffer.cpp  TriangleBuffer.h  Triangles.cpp  Triangles.h  TriangularMesh.cpp  TriangularMesh.h
Models/book/: model.mtl
Models/cottage/: Cottage_FREE.dae
Models/rat/: model.mtl
Models/sandwich/: model.mtl
Models/telega/: model.mtl
OBJReader/: CMakeLists.txt  OBJLoader.cpp  OBJLoader.h  OBJ_Loader.h  idk.cpp
RayTracer/: CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Denoiser.cpp  Denoiser.h  IntersectionData.cpp  IntersectionData.h  Material.h  Object.cpp  Object.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h
Refactor/: BVH.cpp  BVH.h  CMakeLists.txt  Camera.cpp  Camera.h  HitRecord.cpp  HitRecord.h  Hittable.cpp  Hittable.h  HittableList.cpp  HittableList.h  Image.cpp  Image.h  Interval.cpp  Interval.h  LuaLoader.cpp  LuaLoader.h  Material.cpp  Material.h  OutputStream.cpp  OutputStream.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Timer.cpp  Timer.h  Triangle.cpp  Triangle.h  Utils.cpp  Utils.h  scatter.h
Refactor/Application/: CMakeLists.txt  Kernel.cpp  Kernel.h  hip.cpp  main.cpp  realtime.cpp  tmp.cpp  workedDeviceToHost.cpp
Render/General/: CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  LuaLoader.cpp  LuaLoader.h  Scene.cpp  Scene.h
Render/Rasterizer/: CMakeLists.txt  Rasterizer.cpp  Rasterizer.h
Render/RayTracer/: CMakeLists.txt  Denoiser.cpp  Denoiser.h  IntersectionData.cpp  IntersectionData.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Sampler.cpp  Sampler.h
Shapes/: CMakeLists.txt  Cube.cpp  Cube.h  Light.cpp  Light.h  Material.cpp  OBJShape.cpp  OBJShape.h  Object.cpp  Object.h  Point.cpp  Point.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
Tests/: CMakeLists.txt
Tests/TestContainers/: CMakeLists.txt  TestVector.cpp
Tests/TestMath/: CMakeLists.txt  TestMatrix.cpp  TestVectors.cpp
Tests/TestSamplers/: CMakeLists.txt  TestSamplers.cpp
Tests/TestShapes/: CMakeLists.txt  TestTriangle.cpp
ThreadsSheduler/: CMakeLists.txt  Sheduler.cpp  Sheduler.h
Utils/: CMakeLists.txt  SystemUtils.cpp  SystemUtils.h  Types.h
backup/BVH/: BVH.cpp  BVH.h  CMakeLists.txt
